@@ -1,3 +1,4 @@
+* Always return tuple for MultiSelection
 * Use default selectors instead of select
 * Add batch option to push queue tasks
 * Support ref value for reference field
